<resources>
    <string name="app_name">MovieDatabase</string>
    <string name="mock_value">Lorem ipsum dolor sit amet</string>

    <!--home screen-->
    <string name="search_btn_txt">Search Button</string>
    <string name="search_field_hint">Find the movie</string>
    <string name="search_field_hint_part1">Find</string>
    <string name="search_field_hint_part2">the movie</string>
    <string name="trending_movies_label">Trending movies</string>
    <string name="trending_movies_all_label">view all</string>

    <!--movie list item-->
    <string name="movie_rate_txt">Rate\nThis</string>
    <string name="movie_vote_max_txt">/10</string>

    <!--movie description page-->
    <string name="movie_info_director">Director:&#160;</string>
    <string name="movie_info_writer">Writer:&#160;</string>
    <string name="movie_info_stars">Stars:&#160;</string>
    <string name="movie_info_cast">See full cast &amp; crew ></string>

    <!--error messages-->
    <string name="error_no_internet">No internet connection</string>
    <string name="error_general">Something went wrong</string>
    <string name="error_missing_search_input">No search value provided</string>
    <string name="no_results">No results found</string>

    <string name="OK">OK</string>

    <!--movie genre values (Mocked list)-->
    <string name="movie_genre_action">Action</string>
    <string name="movie_genre_adventure">Adventure</string>
    <string name="movie_genre_animation">Animation</string>
    <string name="movie_genre_comedy">Comedy</string>
    <string name="movie_genre_crime">Crime</string>
    <string name="movie_genre_documentary">Documentary</string>
    <string name="movie_genre_drama">Drama</string>
    <string name="movie_genre_family">Family</string>
    <string name="movie_genre_fantasy">Fantasy</string>
    <string name="movie_genre_history">History</string>
    <string name="movie_genre_horror">History</string>
    <string name="movie_genre_music">Music</string>
    <string name="movie_genre_mystery">Mystery</string>
    <string name="movie_genre_romance">Romance</string>
    <string name="movie_genre_sf">Science Fiction</string>
    <string name="movie_genre_tv">TV Movie</string>
    <string name="movie_genre_thriller">Thriller</string>
    <string name="movie_genre_war">War</string>
    <string name="movie_genre_western">Western</string>
</resources>
